# cutouts

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  precovery_results.csv  precovery_results_sample.csv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: conda-build-lint-test.yml  conda-publish.yml  docker-build-lint-test.yml  pip-build-lint-test.yml  python-package-conda.yml
cutouts/: __init__.py  filter.py  io.py  main.py  plot.py  sia.py  version.py
cutouts/io/: __init__.py  nsc.py  nsc_dr2.py  sia.py  skymapper.py  types.py  util.py  ztf.py
cutouts/io/tests/: test_io.py  test_nsc_dr2.py  test_skymapper_dr2.py  test_ztf.py
cutouts/io/tests/testdata/nsc_dr2/: README.md  nsc_dr2_227.5251615214173_-27.026013823449265_56775.33880132809.xml
cutouts/io/tests/testdata/skymapper_dr2/: README.md  skymapper_dr2_282.4358586_-16.1105754_57276.3683912.xml
cutouts/io/tests/testdata/ztf/: README.md  ztf_77.4640676_29.8956146_59940.320462999865.csv
cutouts/tests/: test_io.py  test_main.py  test_plot.py  test_ztf.py
examples/: 2013_RR163.csv
examples/cutouts/: 2013-09-01T03:32:31.123_ra325.89545194_dec0.88760105_expid_c4d_130901_033231_ooi_g_ls9_h20.0_w20.0.fits  2013-09-03T04:17:26.748_ra325.48769149_dec0.67728746_expid_c4d_130903_041726_ooi_g_ls9_h20.0_w20.0.fits  2013-09-08T02:04:23.227_ra324.56237101_dec0.14374022_expid_c4d_130908_020423_ooi_g_ls9_h20.0_w20.0.fits
recipe/: meta.yaml
