[metadata]
name = cutouts
version = file: cutouts/version.py
author = B612 Asteroid Institute, Joachim Moeyens
author_email = moeyensj@uw.edu
home_page = https://github.com/B612-Asteroid-Institute/cutouts
description = Cutouts postage stamps for moving objects
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE.md
keywords = astronomy, astrophysics, space, science, asteroids, comets, solar system
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True
setup_requires =
    setuptools >= 45
    wheel
    setuptools_scm >= 6.0
install_requires =
    numpy
    backoff
    astropy
    pandas
    pyvo
    matplotlib
    pandera
    pydantic

[options.extras_require]
tests =
    pre-commit
    pytest
    coveralls

[options.entry_points]
console_scripts =
    cutouts = cutouts.main:main

[options.package_data]
cutouts =
    examples/*.csv
    examples/*.jpg

[tool.black]
line-length = 110

[flake8]
max_line_length = 110
ignore =
    W503
    E203
exclude =
    cutouts/version.py

[aliases]
test=pytest
